# cryptography

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
include/jwevans_crypto/: SHA1.h
src/: CMakeLists.txt  SHA1.c
test/: CMakeLists.txt  SHA1.cc
